updated about services in home page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -180,7 +180,7 @@
 		        	<p> Car health analytics to enhance the experience</p>
                     <h3> <span class="fa fa-cog fa-spin "></span> Realtime Analytics</h3>
 		        	<p>
-		        		Monitor your car performance on the go!
+		        		Monitor your car performance on the go with our advanced analytics!!
 		        	</p>
                 </div>
 		        </div>
